--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pm2": "^4.5.0",
+    "primeflex": "^2.0.0",
     "sequelize": "^6.3.5",
     "swagger-jsdoc": "^6.0.0-rc.3",
     "swagger-ui-express": "^4.1.5",
