--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "passport-jwt": "^4.0.0",
     "pm2": "^4.5.0",
     "primeflex": "^2.0.0",
+    "rxjs": "^6.6.3",
     "sequelize": "^6.3.5",
     "swagger-jsdoc": "^6.0.0-rc.3",
     "swagger-ui-express": "^4.1.5",
